--- a/src/components/TechnologiesContainer.module.css
+++ b/src/components/TechnologiesContainer.module.css
@@ -1,69 +1,29 @@
-.tech{
+.tech {
     display: flex;
-    justify-content: center;
-    gap: 5%;
     width: 100%;
     background-color: gray;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding: 1rem;
+    flex-direction: column;
+    border: 1px solid #333;
+    width: 100%;
+    justify-content: start;
+
+}
+.h3{
+    display: flex;
+    flex-direction: column;
+    border: #333;
+    background-color: rgb(226, 183, 183);
 }
 
-.html{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color:blanchedalmond;
-    width: 100%;
-    flex-wrap: wrap
-}
-
-.css{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color:blanchedalmond;
-    width: 100%;
-    flex-wrap: wrap
-}
-
-.sass{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color:blanchedalmond;
-    width: 100%;
-    flex-wrap: wrap
-}
-.boot{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color:blanchedalmond;
-    width: 100%;
-    flex-wrap: wrap
-}
-.react{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color:blanchedalmond;
-    width: 100%;
-    flex-wrap: wrap
-}
-.js{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color:blanchedalmond;
-    width: 100%;
-    flex-wrap: wrap
-}
-.git{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color:blanchedalmond;
-    width: 100%;
-    flex-wrap: wrap
+svg{
+    font-size: 100px;
 }
 
 
-    
+.div{
+    display: flex;
+    flex-direction: row;
+}
