--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
-.App{
+.App {
+    
     background-color: antiquewhite;
     width: 100%;
     height: 100%;
     font-size: 1.5rem;
+    
 }
+
+img {
+    width: 200px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    
+}
+
+p{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    font-size: 2.5rem;
+}
+
+
