--- a/src/components/TechnologiesContainer.module.css
+++ b/src/components/TechnologiesContainer.module.css
@@ -9,21 +9,36 @@
     border: 1px solid #333;
     width: 100%;
     justify-content: start;
+    
 
 }
 .h3{
     display: flex;
     flex-direction: column;
     border: #333;
-    background-color: rgb(226, 183, 183);
+    font-size: 2.5rem;
+
 }
+    
 
 svg{
     font-size: 100px;
+    background-color: rgb(48, 73, 73);
+    border-radius: 40%;
 }
 
 
 .div{
     display: flex;
     flex-direction: row;
+}
+.h2{
+    display: flex;
+    font-size: 2.5rem;
+    margin: 5px;
+    background-color:beige;
+    padding: 5px;
+    justify-content: center;
+ 
+    text-align: center;
 }
