--- a/src/layout/navbar/navbar.module.css
+++ b/src/layout/navbar/navbar.module.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1100px;
+    max-width: 1200px;
     margin: 0 auto;
     margin-top: 10px;
 }
@@ -15,8 +15,7 @@
     font-weight: 700;
     cursor: pointer;
     transition: 0.3s;
-    background-color: burlywood;
-    width: 50%;
+    color: rgb(75, 103, 128);
     border-radius: 10px;
 }
 
@@ -29,24 +28,27 @@
     display: flex;
     list-style: none;
     align-items: center;
+    
 }
 
-.item:nth-of-type(1){
-    color: #ba2c2b;
-}
+/* .item:nth-of-type(1){
+    color: rgb(75, 103, 128);
+} */
 
 .item{
-    margin-right: 1.3em;
-    font-size: 17px;
+    margin-right: 1.8em;
+    font-size: 22px;
     cursor: pointer;
-    font-weight: 500; 
-    transition: 0.3s;
-    background-color: rgb(81, 213, 236);
+    color: rgb(75, 103, 128);
+    font-weight: 600; 
+    transition: 0.1s;
+    /* background-color: rgb(75, 103, 128); */
+   
     border-radius: 5px;
 }
 
 .item:hover{
-    color: #ba2c2b; 
+    color: burlywood; 
 }
 
 .toggle{
@@ -69,7 +71,7 @@
 }
 
 .fechar:hover{
-    transform: scale(1.2);
+    transform: scale(1.5);
 
 }
 
