--- a/src/Sessões/Footer/footer.css
+++ b/src/Sessões/Footer/footer.css
@@ -79,6 +79,8 @@ footer{
 @media screen and (max-width:768px){
     .footer-container{
         flex-direction: column;
+        width: 100%;
+        color: #fff;
     }
 
     .quem-sou{
@@ -87,16 +89,15 @@ footer{
     }
 
     .quem-sou p:first-child{
-        font-size: 40px;
+        font-size: 30px;
         font-weight: 600;
-        color: black;
+        color:#fff;
         margin-bottom: 10px;
         margin-right: 15px;
+        
     }
     
-    .quem-sou p:nth-of-type(2){
-        margin-top: 0px;
-    }
+   
 
     .partes-pagina ul li{
         margin-right: 10px;
