--- a/src/Sessões/sobre-mim/SobreMim.module.css
+++ b/src/Sessões/sobre-mim/SobreMim.module.css
@@ -1,46 +1,49 @@
-.h1_sobre{
+.h1_sobre {
     text-align: center;
-    margin-top: 130px;
+    font-size: 3.2rem;
+    margin-top: 50px;
     margin-bottom: 40px;
+    color:  rgb(75, 103, 128);
 }
 
-.sobreMim{
-    max-width: 600px;
-    margin: 0 auto;
+.sobreMim {
+    max-width: 850px;
+    margin: 50px auto;
     display: flex;
-   
     align-items: center;
+    border-radius: 50px;
     padding: 1em;
-    padding-bottom: 120px;
+    padding-bottom:40px;
     background-color: rgb(75, 103, 128);
+    box-shadow: 7px 7px 8px rgba(26, 133, 160, 0.9);
 }
 
-.fotodeperfil2{
+.fotoPerfil {
     width: 50%;
     border-radius: 40px;
-    width:400px;
-    height: 240px;
-    box-shadow: 3px 3px 6px 2px rgba(0, 0, 0, 0.501);
+    width: 400px;
+    height: 400px;
+    box-shadow: 7px 7px 8px rgba(26, 133, 160, 0.9);
 }
 
-.resumo{
+.resumo {
     width: 50%;
     padding: 1em;
     margin-left: 30px;
 }
 
-.p_sobre{
+.p_sobre {
     font-weight: 500;
-    font-size: 20px;
+    font-size: 22px;
     color: #7a7a7a;
     margin-bottom: 15px;
     color: #fff;
 }
 
-.button_sobre{
+.button_sobre {
     padding: 0.6em 1em;
-    background-color:burlywood;
-    color:black ;
+    background-color: burlywood;
+    color: black;
     font-weight: 600;
     font-size: 17px;
     border: 0;
@@ -49,73 +52,75 @@
     transition: 0.3s;
 }
 
-.button_sobre:hover{
-    background-color:rgb(224, 166, 90);
+.button_sobre:hover {
+    background-color: rgb(224, 166, 90);
 
 
 }
 
 
-@media screen and (max-width:1000px){
-    .sobreMim{
-        max-width: 700px;
-   
+@media screen and (max-width:1000px) {
+    .sobreMim {
+        width: 80%;
+        color: #fff;
+
     }
 
-    .fotodeperfil2{
-        width: 50%;
+    .fotoPerfil {
+        width: 30%;
         border-radius: 80px;
-        width:400px;
+        width: 300px;
         height: 240px;
         box-shadow: 0px 0px 7px 4px rgba(0, 0, 0, 0.501);
         margin: 0 auto;
     }
 
-      
-    .p_sobre{
+
+    .p_sobre {
         font-weight: 500;
         font-size: 15px;
         color: #7a7a7a;
         margin-bottom: 15px;
+        color: #fff;
     }
-    
+
 }
 
 @media screen and (max-width:768px) {
 
-    .h1_sobre{
-       
+    .h1_sobre {
+
         margin-bottom: 0px;
     }
-    
 
-    .sobreMim{
+
+    .sobreMim {
         flex-wrap: wrap;
-        
+
     }
 
-    
 
-    .fotodeperfil2{
+
+    .fotoPerfil {
         width: 100%;
         border-radius: 80px;
-        width:360px;
+        width: 360px;
         height: 220px;
         box-shadow: 0px 0px 7px 4px rgba(0, 0, 0, 0.501);
         margin: 0 auto;
     }
 
-    .resumo{
+    .resumo {
         width: 100%;
         margin-left: 0;
         padding: 0;
         margin-top: 20px;
     }
-    
-    .p_sobre{
+
+    .p_sobre {
         font-weight: 500;
         font-size: 16px;
-        color: #7a7a7a;
+        color: #fff;
         margin-bottom: 15px;
     }
 
