--- a/src/Sessões/Projetos/Projetos.css
+++ b/src/Sessões/Projetos/Projetos.css
@@ -1,39 +1,53 @@
 .container {
+    background-color: rgb(75, 103, 128);
+    padding: 20px;
+    border-radius: 20px;
+    max-width: 600px;
+    height: 1400px;
     display: flex;
-    width: 100%;
-    border-radius: 15px;
-    height: 350px;
-    margin: 0 auto;
-    list-style: none;
-    background-color: rgb(120, 218, 218);
     justify-content: center;
-    gap: 2em;
-    align-items: center;
-
+    margin: 0 auto;
+    flex-wrap: wrap;
+}
+h2{
+    font-size: 2.5rem;
+    margin-top: 10px;
+    color:#fff ;
+    text-align: center;
+}
+h1{
+    color:#fff; 
+    margin-bottom: 15px;
+    font-size: 2.5rem;
 }
 
 
 .img1 {
-    display: flex;
     width: 300px;
     height: 200px;
+    border-radius: 15px;
     background-color: black;
     display: flex;
     margin: 0 auto;
-    border-radius: 10px;
-    overflow-wrap: break-word;
-
-
 }
-
 .pp {
-
-    margin-top: 10px;
-    background-color: blue;
-    width: 100%;
+    margin-top: 20px;
+    background-color: rgb(216, 240, 237);
     padding: 15px;
+    font-size: 1.3rem;
+    margin-bottom: 20px;
     word-break: break-all;
     border-radius: 20px;
+}
 
 
+@media screen and (max-width:1100px){
+    .container{
+        height: 1200px;
+        flex-wrap: wrap;
+       
+    }
+
+   
+   
 }
