--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  /* background-color: black; */
+  /* background-color: rgb(217, 248, 217); */
+ 
 
 }
 
