--- a/src/Sessões/Projetos/Projetos.css
+++ b/src/Sessões/Projetos/Projetos.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: rgb(75, 103, 128);
+    /* background-color: rgb(75, 103, 128); */
     padding: 20px;
     border-radius: 20px;
     max-width: 1200px;
