--- a/src/Sessões/sobre-mim/SobreMim.module.css
+++ b/src/Sessões/sobre-mim/SobreMim.module.css
@@ -1,9 +1,9 @@
 .h1_sobre {
     text-align: center;
-    font-size: 3.2rem;
+    font-size: 4rem;
     margin-top: 50px;
     margin-bottom: 40px;
-    color:  rgb(75, 103, 128);
+    color: #fff;
 }
 
 .sobreMim {
@@ -14,7 +14,7 @@
     border-radius: 50px;
     padding: 1em;
     padding-bottom:40px;
-    background-color: rgb(75, 103, 128);
+    /* background-color: rgb(75, 103, 128); */
     box-shadow: 7px 7px 8px rgba(26, 133, 160, 0.9);
 }
 
@@ -23,7 +23,6 @@
     border-radius: 40px;
     width: 300px;
     height: 300px;
-    box-shadow: 7px 7px 8px rgba(26, 133, 160, 0.9);
 }
 
 .resumo {
@@ -40,23 +39,7 @@
     color: #fff;
 }
 
-.button_sobre {
-    padding: 0.6em 1em;
-    background-color: burlywood;
-    color: black;
-    font-weight: 600;
-    font-size: 17px;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-}
 
-.button_sobre:hover {
-    background-color: rgb(224, 166, 90);
-
-
-}
 
 
 @media screen and (max-width:1000px) {
