--- a/src/Sessões/Contato/contato.css
+++ b/src/Sessões/Contato/contato.css
@@ -9,7 +9,8 @@
 
 .p-contato{
     width: 100%;
-    font-size: 42px;
+    font-size: 50px;
+    color: #fff;
     margin-bottom: 20px;
     font-weight: 600;
     margin-top: 50px;
@@ -21,6 +22,8 @@
     display: flex;
     align-items: center;
     padding: 5px 0px;
+    color: #fff;
+
 }
 
 .email svg, .telefone svg{
