--- a/src/Sessões/Projetos/Projetos.css
+++ b/src/Sessões/Projetos/Projetos.css
@@ -38,7 +38,7 @@ h2{
     max-width: 300px;
     flex-wrap: wrap;
     margin-top: 20px;
-    background-color: rgb(216, 240, 237);
+    color: #fff;
     padding: 15px;
     font-size: 1.3rem;
     margin-bottom: 20px;
