--- a/src/Sessões/Tecnologias/tecnologias.css
+++ b/src/Sessões/Tecnologias/tecnologias.css
@@ -1,7 +1,7 @@
 .habilidades_container{
   display: flex;
   justify-content: space-between;
-  max-width: 1200px;
+  max-width: 1400px;
    padding: 25px 30px;
   box-shadow: 10px 7px 7px 3px rgba(26, 133, 160, 0.5);
   margin: 0 auto;
@@ -24,7 +24,10 @@
 
 @media screen and (max-width:800px){
   .habilidades_container{
-     width: 80%;
+    justify-content: center;
+     max-width: 1200px;
+     height: 300px;
+     flex-wrap: wrap;
      font-size: 2rem;
   }
 }
