--- a/src/Sessões/Home/Home.module.css
+++ b/src/Sessões/Home/Home.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1300px;
+    max-width: 1400px;
     margin: 0 auto;
     padding: 1em;
     margin-top: 80px;
@@ -16,13 +16,16 @@
     border-radius: 10px;
     text-align: start;
     gap: 2px;
-    box-shadow: 7px 7px 8px rgba(26, 133, 160, 0.9);
-   
+    padding: 10px;
+    box-shadow: 7px 7px 8px rgba(26, 133, 160, 0.3);
+
 }
 
-.dev{
-    font-size: 30px;
+.dev {
+    font-size: 2rem;
     font-weight: 600;
+    flex-wrap: wrap;
+    color: rgb(31, 163, 224);
     width: 100%;
     margin-top: 10px;
     border-radius: 10px;
@@ -54,7 +57,7 @@
 
 @media screen and (max-width:1000px) {
     .home_container {
-        max-width: 700px;
+        max-width: 900px;
     }
 
     .home_container img {
@@ -68,7 +71,7 @@
         width: 220px;
         height: 220px;
         position: absolute;
-        top: 90px;
+        top: 70px;
         left: 0;
         right: 0;
         margin-left: auto;
@@ -77,7 +80,13 @@
     }
 
     .home_container {
-        display: block;
+        max-width: 600px;
+        font-size: 2rem;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        margin-top: 220px;
+
     }
 
     .home_container h1 {
@@ -99,5 +108,9 @@
 
     .scroll_down {
         display: none;
+    }
+    .dev{
+        flex-wrap: wrap;
+        font-size: 1.5rem;
     }
 }
