--- a/src/Sessões/Tecnologias/tecnologias.css
+++ b/src/Sessões/Tecnologias/tecnologias.css
@@ -20,15 +20,25 @@
   color: #fff; ;
 }
 
+DiHtml5{
+  color: orange;
+  background-color: orange;
+}
+
 
 
 @media screen and (max-width:800px){
   .habilidades_container{
     justify-content: center;
      max-width: 1200px;
+     gap: 15px;
      height: 300px;
      flex-wrap: wrap;
-     font-size: 2rem;
+     font-size: 4.8rem;
+  }
+
+  .h1-tecnologias{
+    font-size: 2.5rem;
   }
 }
 
