--- a/src/layout/navbar/navbar.module.css
+++ b/src/layout/navbar/navbar.module.css
@@ -19,7 +19,7 @@
 }
 
 .p_navbar:hover {
-    color: #eff5f0;
+    color: rgb(31, 163, 224);
 
 }
 
@@ -49,6 +49,7 @@
     display: none;
     font-size: 22px;
     transition: 0.3s;
+    color: #fff;
 }
 
 .menu {
@@ -61,7 +62,7 @@
 
 .fechar {
     transition: 0.4s;
-    transform: scale(1);
+    transform: scale(3);
 }
 
 .fechar:hover {
