--- a/src/Sessões/Home/Home.module.css
+++ b/src/Sessões/Home/Home.module.css
@@ -31,6 +31,13 @@
     border-radius: 10px;
     margin-bottom: 10px;
 }
+.rede svg{
+    font-size: 30px;
+    margin-right: 15px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    transition: 0.3s;
+}
 
 .p_segundo {
     font-size: 20px;
