--- a/src/Sessões/Projetos/Projetos.css
+++ b/src/Sessões/Projetos/Projetos.css
@@ -3,17 +3,39 @@
     padding: 20px;
     border-radius: 20px;
     max-width: 1200px;
-    height: 600px;
+    height: 700px;
     display: flex;
     justify-content: space-around;
     margin: 0 auto;
     flex-wrap: wrap;
+    /* background-color: bisque; */
+
 }
-h2{
+
+h2 {
     font-size: 2.5rem;
-    margin-top: 10px;
-    color:#fff ;
+    display: flex;
+    justify-content: center;
     text-align: center;
+    width: 300px;
+
+    margin-top: 10px;
+    color: #fff;
+    text-align: center;
+
+}
+
+.techs-all {
+    display: flex;
+    justify-content: space-around;
+}
+
+.techs {
+    color: #fff;
+    font-size: 1.5rem;
+    border-radius: 4px;
+    margin-bottom: 25px;
+    background-color: rgb(34, 37, 37);
 }
 
 .img1 {
@@ -22,10 +44,11 @@ h2{
     max-width: 300px;
     height: 200px;
     border-radius: 30%;
-    background-color: black;
     display: flex;
     margin: 0 auto;
+
 }
+
 .pp {
     max-width: 300px;
     flex-wrap: wrap;
@@ -36,16 +59,31 @@ h2{
     margin-bottom: 20px;
     word-break: break-all;
     border-radius: 20px;
+
+}
+
+.btn-link {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    background-color: rgb(34, 37, 37);
+    font-size: 2rem;
+    border-radius: 5px;
+
 }
 
 
-@media screen and (max-width:1100px){
-    .container{
-        height: 1200px;
+
+@media screen and (max-width:1100px) {
+    .container {
+        height: 2200px;
         flex-wrap: wrap;
-       
+
     }
 
-   
-   
+
+
 }
