--- a/src/Sessões/Projetos/Projetos.css
+++ b/src/Sessões/Projetos/Projetos.css
@@ -3,46 +3,62 @@
     padding: 20px;
     border-radius: 20px;
     max-width: 1200px;
-    height: 700px;
+    height: 800px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0 auto;
     flex-wrap: wrap;
-    /* background-color: bisque; */
+    border: 2px solid rgb(18, 101, 224);
 
-}
-
-h2 {
-    font-size: 2.5rem;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    width: 300px;
-
-    margin-top: 10px;
-    color: #fff;
-    text-align: center;
 
 }
 
 .techs-all {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
-.techs {
+.tech {
     color: #fff;
-    font-size: 1.5rem;
-    border-radius: 4px;
-    margin-bottom: 25px;
-    background-color: rgb(34, 37, 37);
+    font-family: monospace;
+    font-size: 2rem;
+    margin: 10px;
+    margin-bottom: 2rem;
+    border-radius: 10px;
+    background-color: rgb(0, 0, 0);
+    transition: 0.3s;
+    cursor: pointer;
+
 }
+
+.tech svg {
+    display: flex;
+    margin: 0 auto;
+}
+
+.tech:hover {
+    color: rgb(12, 152, 199);
+}
+
+h2 {
+    font-size: 2.5rem;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    text-align: center;
+    width: 300px;
+    margin-top: 10px;
+    color: #fff;
+    text-align: center;
+}
+
 
 .img1 {
     display: flex;
     justify-content: space-between;
     max-width: 300px;
     height: 200px;
+
     border-radius: 30%;
     display: flex;
     margin: 0 auto;
@@ -50,12 +66,14 @@ h2 {
 }
 
 .pp {
-    max-width: 300px;
+    max-width: 360px;
     flex-wrap: wrap;
     margin-top: 20px;
     color: #fff;
     padding: 15px;
-    font-size: 1.3rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.6rem;
+    background-color: rgb(27, 27, 26);
     margin-bottom: 20px;
     word-break: break-all;
     border-radius: 20px;
@@ -65,13 +83,15 @@ h2 {
 .btn-link {
     margin: 0 auto;
     display: flex;
+    width: 40%;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: #fff;
     background-color: rgb(34, 37, 37);
     font-size: 2rem;
-    border-radius: 5px;
+    margin-bottom: 10px;
+    border-radius: 20px;
 
 }
 
@@ -79,9 +99,8 @@ h2 {
 
 @media screen and (max-width:1100px) {
     .container {
-        height: 2200px;
+        height: 2300px;
         flex-wrap: wrap;
-
     }
 
 
