--- a/src/Sessões/Tecnologias/tecnologias.css
+++ b/src/Sessões/Tecnologias/tecnologias.css
@@ -1,49 +1,101 @@
-.habilidades_container{
+.habilidades_container {
   display: flex;
   justify-content: space-between;
   max-width: 1400px;
-   padding: 25px 30px;
-  box-shadow: 10px 7px 7px 3px rgba(26, 133, 160, 0.5);
+  padding: 25px 30px;
+  border: 1px solid rgb(18, 101, 224);
   margin: 0 auto;
   font-size: 7rem;
   flex-wrap: wrap;
   font-family: 'Poppins', sans-serif;
   margin-bottom: 150px;
   color: #fff;
-  /* background-color: rgb(75, 103, 128); */
+ 
 }
 
-.h1-tecnologias{
+.h1-tecnologias {
+  max-width: 200px;
   margin-bottom: 60px;
   text-align: center;
   font-size: 4rem;
-  color: #fff; ;
+  color: #fff;
+  ;
 }
 
-.proj{
+.techs {
+  display: flex;
+  justify-content: space-around;
+  font-size: 2rem;
+  margin: 0 auto;
+  gap: 4rem;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+
+}
+
+#html svg {
+  color: orange;
+  font-size: 5rem;
+}
+
+#css svg {
+  color: rgb(23, 23, 185);
+  font-size: 5rem;
+}
+
+#react svg {
+  color: rgb(50, 180, 231);
+  font-size: 5rem;
+}
+
+#js svg {
+  color: yellow;
+  font-size: 5rem;
+}
+
+#bootstrap svg {
+  color: purple;
+  font-size: 5rem;
+}
+
+#sass svg {
+  color: pink;
+  font-size: 5rem;
+}
+
+#git svg {
+  color: orange;
+  font-size: 5rem;
+}
+
+
+
+.proj {
   font-size: 5rem;
   color: #fff;
   display: flex;
   justify-content: center;
-  
+
 }
 
 
 
-@media screen and (max-width:800px){
-  .habilidades_container{
+@media screen and (max-width:800px) {
+  .habilidades_container {
     justify-content: center;
-     max-width: 1200px;
-     gap: 15px;
-     height: 300px;
-     flex-wrap: wrap;
-     font-size: 4.8rem;
+    max-width: 1200px;
+    gap: 15px;
+    height: 1800px;
+    flex-wrap: wrap;
+    font-size: 4.8rem;
   }
 
-  .h1-tecnologias{
+  .h1-tecnologias {
     font-size: 2.5rem;
   }
+
+  .tech {
+    max-width: 100%
+  }
 }
-
-
-
