--- a/src/Sessões/Contato/contato.css
+++ b/src/Sessões/Contato/contato.css
@@ -1,13 +1,14 @@
-.contato-container{
+.contato-container {
     display: flex;
     flex-wrap: wrap;
     max-width: 850px;
     margin: 0 auto;
     padding: 1em;
+    margin-top: 50px;
 }
 
 
-.p-contato{
+.p-contato {
     width: 100%;
     font-size: 60px;
     color: #fff;
@@ -18,7 +19,8 @@
 
 
 
-.telefone, .email{
+.telefone,
+.email {
     display: flex;
     font-size: 1.5rem;
     align-items: center;
@@ -27,23 +29,25 @@
 
 }
 
-.email svg, .telefone svg{
+.email svg,
+.telefone svg {
     font-size: 32px;
     color: brown;
     margin-right: 16px;
 }
 
 
-.titulo{
+.titulo {
     font-weight: 600;
     font-size: 18px;
 }
 
-.form-contato{
+.form-contato {
     width: 60%;
 }
 
-.input-nome, .input-email{
+.input-nome,
+.input-email {
     width: 40%;
     height: 80px;
     outline: 0;
@@ -52,37 +56,41 @@
 
 }
 
-.input-nome::placeholder, .input-email::placeholder, .textarea-mensagem::placeholder{
+.input-nome::placeholder,
+.input-email::placeholder,
+.textarea-mensagem::placeholder {
     color: black;
     font-weight: 500;
     font-family: 'Poppins', sans-serif;
-    
+
 }
 
-.input-nome{
+.input-nome {
     margin-right: 30px;
 }
 
-.input-nome, .input-email, .textarea-mensagem{
+.input-nome,
+.input-email,
+.textarea-mensagem {
     border: 0;
     background: rgb(252, 238, 238);
     border-radius: 5px;
 }
 
-.textarea-mensagem{
+.textarea-mensagem {
     height: 240px;
     margin-top: 30px;
     width: 90%;
     font-size: 17px;
     padding: 8px 15px;
     outline: 0;
-    resize:vertical;
+    resize: vertical;
 }
 
-.btn-contato{
+.btn-contato {
     padding: 0.7em 1em;
-    background-color:rgb(47, 127, 218);
-    color:black ;
+    background-color: rgb(47, 127, 218);
+    color: black;
     font-weight: 600;
     font-size: 17px;
     border: 0;
@@ -94,40 +102,40 @@
     margin-bottom: 30px;
 }
 
-.btn-contato:hover{
-    background-color:rgb(224, 166, 90);
+.btn-contato:hover {
+    background-color: rgb(224, 166, 90);
 }
 
-.btn-contato i{
+.btn-contato i {
     margin-left: 8px;
     font-size: 20px;
 }
 
 
 
-@media screen and (max-width:1000px){
-    .p-contato{
-        margin-left:50px;
+@media screen and (max-width:1000px) {
+    .p-contato {
+        margin-left: 50px;
     }
 
 }
 
 
 
-@media screen and (max-width:800px){
-    .p-contato{
+@media screen and (max-width:800px) {
+    .p-contato {
         margin-left: 40px;
     }
 }
 
 @media screen and (max-width:768px) {
-    .p-contato{
-        margin-left:6%;
+    .p-contato {
+        margin-left: 6%;
     }
 
 
 
-    .telefone{
+    .telefone {
         margin-bottom: 10px;
     }
 
