--- a/src/Sessões/Projetos/Projetos.css
+++ b/src/Sessões/Projetos/Projetos.css
@@ -8,9 +8,18 @@
     justify-content: space-between;
     margin: 0 auto;
     flex-wrap: wrap;
-    border: 2px solid rgb(18, 101, 224);
+    box-shadow: 2px 2px 20px 15px rgba(6, 212, 240, 0.5);
 
 
+}
+
+.h1proj {
+    color: #fff;
+}
+
+btn {
+
+    background-color: #fff;
 }
 
 .techs-all {
