--- a/src/Sessões/sobre-mim/SobreMim.module.css
+++ b/src/Sessões/sobre-mim/SobreMim.module.css
@@ -1,30 +1,34 @@
 .h1_sobre {
     text-align: center;
     font-size: 4rem;
-    margin-top: 50px;
-    margin-bottom: 40px;
+    margin-top: 60px;
     color: #fff;
 }
-.h1_sobre:hover{
+
+.h1_sobre:hover {
     color: rgb(31, 163, 224);
     transition: 0.2s;
 }
-.sociais{
+
+.sociais {
     display: flex;
     flex-wrap: wrap;
     font-size: 50px;
 }
 
+
+
 .sobreMim {
-    max-width: 1300px;
+    max-width: 1400px;
     margin: 50px auto;
     justify-content: center;
     display: flex;
+    margin-bottom: 200px;
     align-items: center;
-    border-radius: 50px;
-    padding: 1em;
-    padding-bottom:40px;
-    border: 1px groove rgb(18, 101, 224);
+    padding-bottom: 40px;
+    /* border: 1px solid #fff; */
+    box-shadow: 2px 2px 20px 15px rgba(6, 212, 240, 0.5);
+
 }
 
 .fotoPerfil {
@@ -38,10 +42,35 @@
 
 .p_sobre {
     display: flex;
-    font-size: 22px;
-    width: 800px;
-    margin: 4rem;
+    font-size: 25px;
+    font-family: unset;
+    max-width: 800px;
+    margin: 5rem;
     color: #fff;
+}
+
+.curriculo {
+    width: 300px;
+    display: flex;
+    text-decoration: none;
+    justify-content: center;
+    margin-top: 25px;
+    background-color: rgb(10, 114, 133);
+    border-radius: 10px;
+    font-size: 1.5rem;
+    cursor: pointer;
+
+    color: #fff;
+    transition: 0.5s;
+}
+
+a {
+    text-decoration: none;
+}
+
+.curriculo:hover {
+    background-color: #fff;
+    color: black;
 }
 
 
